@@ -1,8 +1,11 @@
+2007-07-05  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-thumbnailer.c: (main): call g_thread_init
+
 2007-06-06  Denis Washington  <denisw@svn.gnome.org>
 
 	* theme-thumbnailer.c: (main):
 	Update for changes in thumbnailer API.
-
 
 2007-06-06  Jens Granseuer  <jensgr@gmx.net>
 
